--- a/src/app/components/contact-me-section/contact-me-section.scss
+++ b/src/app/components/contact-me-section/contact-me-section.scss
@@ -45,7 +45,7 @@
       justify-content: flex-start;
       align-items: flex-start;
       width: 48%;
-      height: auto;
+      height: 180px;
       p{
         font-family: 'Josefin Sans';
         font-style: normal;
