--- a/src/app/components/hero-section/hero-section.html
+++ b/src/app/components/hero-section/hero-section.html
@@ -10,7 +10,7 @@
       <app-my-logo class="hero-logo"/>
       <app-social-media-buttons class="socialBtn"/>
       <h1>Artur Groblicki</h1>
-      <h2>FRONTEND DEVELOPER</h2>
+      <h2>{{translate.position}}</h2>
       <button class="hero-section__title--arowwdown" (click)="navService.scrollToSection('why-me-section', 'why-me-btn')">
         <img src="./assets/img/arrow/arrow-down.png" alt="Arrow down">
       </button>
