--- a/src/app/components/legal-notice/legal-notice.html
+++ b/src/app/components/legal-notice/legal-notice.html
@@ -9,8 +9,8 @@
         <app-mobile-menu class="mobile-menu" />
       }
     }
-    <h1>Legal Notice</h1>
-    <h3>Imprint</h3>
+    <h1>{{translate.title}}</h1>
+    <h3>{{translate.imprint}}</h3>
     <ul>
       <li>Artur Groblicki</li>
       <li>Mühlreit 13</li>
@@ -18,31 +18,31 @@
     </ul>
 
     <div class="legal-content">
-      <h3>Exploring the Board</h3>
+      <h3>{{translate.board}}</h3>
       <p>Email: <a href="mailto:arturgroblicki@gmail.com">arturgroblicki@gmail.com</a></p>
 
-      <h3>Acceptance of terms</h3>
-      <p>By accessing and using <span>Portfolio</span> (Product), you acknowledge and agree to the following terms and conditions, and any policies, guidelines, or amendments thereto that may be presented to you from time to time. We, the listed students, may update or change the terms and conditions from time to time without notice.</p>
+      <h3>{{translate.terms}}</h3>
+      <p [innerHTML]="translate.termsDescription" class="styled-text"></p>
 
-      <h3>Scope and ownership of the product</h3>
-      <p><span>Portfolio</span> has been developed as part of a student group project in a web development bootcamp at the <span>Developer Akademie GmbH</span>. It has an educational purpose and is not intended for extensive personal & business usage. As such, we cannot guarantee consistent availability, reliability, accuracy, or any other aspect of quality regarding this Product.</p>
-      <p>The design of <span>Portfolio</span> is owned by the <span>Developer Akademie GmbH</span>. Unauthorized use, reproduction, modification, distribution, or replication of the design is strictly prohibited.</p>
+      <h3>{{translate.scope}}</h3>
+      <p [innerHTML]="translate.scopeDescriptionPartOne" class="styled-text"></p>
+      <p [innerHTML]="translate.scopeDescriptionPartTwo" class="styled-text"></p>
 
-      <h3>Proprietary rights</h3>
-      <p>Aside from the design owned by <span>Developer Akademie GmbH</span>, we, the listed students, retain all proprietary rights in <span>Portfolio</span>, including any associated copyrighted material, trademarks, and other proprietary information.</p>
+      <h3>{{translate.proprietaryRights}}</h3>
+      <p [innerHTML]="translate.proprietaryRightsDescription" class="styled-text"></p>
 
-      <h3>Use of the product</h3>
-      <p><span>Portfolio</span> is intended to be used for lawful purposes only, in accordance with all applicable laws and regulations. Any use of <span>Portfolio</span> for illegal activities, or to harass, harm, threaten, or intimidate another person, is strictly prohibited. You are solely responsible for your interactions with other users of <span>Portfolio</span>.</p>
+      <h3>{{translate.useOfTheProduct}}</h3>
+      <p [innerHTML]="translate.useOfTheProductDescription" class="styled-text"></p>
 
-      <h3>Disclaimer of warranties and limitation of liability</h3>
-      <p><span>Portfolio</span> is provided "as is" without warranty of any kind, whether express or implied, including but not limited to the implied warranties of merchantability, fitness for a particular purpose, and non-infringement. In no event will we, the listed students, or the <span>Developer Akademie</span>, be liable for any direct, indirect, incidental, special, consequential or exemplary damages, including but not limited to, damages for loss of profits, goodwill, use, data, or other intangible losses, even if we have been advised of the possibility of such damages, arising out of or in connection with the use or performance of <span>Portfolio</span>.</p>
+      <h3>{{translate.disclaimer}}</h3>
+      <p [innerHTML]="translate.disclaimerDescription" class="styled-text"></p>
 
-      <h3>Indemnity</h3>
-      <p>You agree to indemnify, defend and hold harmless us, the listed students, the <span>Developer Akademie</span>, and our affiliates, partners, officers, directors, agents, and employees, from and against any claim, demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of or relating to your use of <span>Portfolio</span> and/or your breach of this Legal Notice.</p>
+      <h3>{{translate.indemnity}}</h3>
+      <p [innerHTML]="translate.indemnityDescription" class="styled-text"></p>
 
-      <p class="footer-note">For any questions or notices, please contact us at <a href="mailto:arturgroblicki@gmail.com">arturgroblicki@gmail.com</a>.</p>
+      <p class="footer-note">{{translate.mailContact}} <a href="mailto:arturgroblicki@gmail.com">arturgroblicki@gmail.com</a>.</p>
 
-      <p class="footer-note">Date: July 26, 2025</p>
+      <p class="footer-note">{{translate.date}} 26, 2026</p>
     </div>
   </div>
 </section>
