--- a/src/app/components/menu-bar/menu-bar.html
+++ b/src/app/components/menu-bar/menu-bar.html
@@ -2,14 +2,14 @@
   <div id="menu-bar" class="menu-bar">
     <app-my-logo id="logo-menu" class="header-logo"/>
     <div id="btn-for-section" class="menu-bar__sections">
-      <button id="why-me-btn" [class.active]="navService.activeButton() === 'why-me-btn'" (click)="navService.scrollToSection('why-me-section','why-me-btn')">Why me</button>
-      <button id="my-skills-btn" [class.active]="navService.activeButton() === 'my-skills-btn'" (click)="navService.scrollToSection('my-skills-section','my-skills-btn')">Skills</button>
-      <button id="my-project-btn" [class.active]="navService.activeButton() === 'my-project-btn'" (click)="navService.scrollToSection('my-project-section','my-project-btn')">Projects</button>
-      <button id="contact-me-btn" [class.active]="navService.activeButton() === 'contact-me-btn'" (click)="navService.scrollToSection('contact-me-section','contact-me-btn')">Contact</button>
+      <button id="why-me-btn" [class.active]="navService.activeButton() === 'why-me-btn'" (click)="navService.scrollToSection('why-me-section','why-me-btn')">{{translate.whyMe}}</button>
+      <button id="my-skills-btn" [class.active]="navService.activeButton() === 'my-skills-btn'" (click)="navService.scrollToSection('my-skills-section','my-skills-btn')">{{translate.skills}}</button>
+      <button id="my-project-btn" [class.active]="navService.activeButton() === 'my-project-btn'" (click)="navService.scrollToSection('my-project-section','my-project-btn')">{{translate.projects}}</button>
+      <button id="contact-me-btn" [class.active]="navService.activeButton() === 'contact-me-btn'" (click)="navService.scrollToSection('contact-me-section','contact-me-btn')">{{translate.contact}}</button>
     </div>
     <div id="btn-for-language" class="menu-bar__language">
-      <button id="EN-btn" [class.active]="activedLangBtn === 'EN-btn'" (click)="activLangBtn('EN-btn')" (mouseover)="handleLangHover('EN-btn')" (mouseleave)="handleLangLeave()">EN</button>
-      <button id ="DE-btn" [class.active]="activedLangBtn === 'DE-btn'" (click)="activLangBtn('DE-btn')" (mouseover)="handleLangHover('DE-btn')" (mouseleave)="handleLangLeave()">DE</button>
+      <button id="EN-btn" [class.active]="activedLangBtn === 'EN-btn'" (click)="activLangBtn('EN')" (mouseover)="handleLangHover('EN-btn')" (mouseleave)="handleLangLeave()">EN</button>
+      <button id ="DE-btn" [class.active]="activedLangBtn === 'DE-btn'" (click)="activLangBtn('DE')" (mouseover)="handleLangHover('DE-btn')" (mouseleave)="handleLangLeave()">DE</button>
     </div>
     <div id="burger-menu" class="burger-menu">
       <button><img [src]="path()" alt="Burger menu" (click)="toggleMenu()"></button>
