--- a/src/app/components/menu-bar/menu-bar.scss
+++ b/src/app/components/menu-bar/menu-bar.scss
@@ -46,8 +46,8 @@
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
-          width: 200%;
-          height: 200%;
+          width: 200px;
+          height: 60px;
           background-image: url('/assets/img/Ellipse-24.png');
           background-size: contain;
           background-repeat: no-repeat;
