--- a/src/app/components/my-references/my-references.html
+++ b/src/app/components/my-references/my-references.html
@@ -1,6 +1,6 @@
 <div class="background">
   <div class="references">
-    <h3>Need a teamplayer? Here what my colleagues said about me</h3>
+    <h3>{{translate.teamPlayer}}</h3>
       <div class="references__board">
         @if (references && references.length > 0){
           @for (item of references; track item.id) {
