--- a/src/app/components/my-skills-section/my-skills-section.html
+++ b/src/app/components/my-skills-section/my-skills-section.html
@@ -1,6 +1,6 @@
 <div class="background">
   <div id="my-skills-section" class="my-skills-section scroll-section">
-      <h2>My Skills</h2>
+      <h2>{{translate.title}}</h2>
       <div class="my-skills-section__inhalt">
         <div class="my-skills-section__inhalt__grid">
         @if (isMobile) {
@@ -16,9 +16,9 @@
         <div class="my-skills-section__inhalt__learning">
           <span class="my-skills-section__inhalt__learning--font-color">
           @if (isMobile) {
-            What I am currently learning
+            {{translate.learningMob}}
           } @else {
-            I am currently learning
+            {{translate.learnig}}
           }
           </span>
           <div class="my-skills-section__inhalt__learning--icons">
@@ -27,10 +27,10 @@
           }
           </div>
           <span>
-            Mastering React and Vue to build innovative, user-centric web experiences while staying at the forefront of modern technology.
+            {{translate.description}}
           </span>
         </div>
       </div>
-      <button (click)="navService.scrollToSection('contact-me-section','contact-me-btn')">Let’s talk</button>
+      <button (click)="navService.scrollToSection('contact-me-section','contact-me-btn')">{{translate.btn}}</button>
   </div>
 </div>
