--- a/src/app/components/why-me-section/why-me-section.scss
+++ b/src/app/components/why-me-section/why-me-section.scss
@@ -82,7 +82,7 @@
     }
     &__description{
       width: 47%;
-      height: 180px;
+      min-height: 240px;
       span{
         font-family: 'Josefin Sans';
         font-style: normal;
