--- a/src/app/components/why-me-section/why-me-section.scss
+++ b/src/app/components/why-me-section/why-me-section.scss
@@ -55,7 +55,7 @@
                 transform: translate(-50%, -50%);
                 width: 140%;
                 height: 140%;
-                background-image: url('/assets/img/why-me-icons/Ellipse-24.png');
+                background-image: url('../../../../public/assets/img/why-me-icons/WHY-Ellipse-24.png');
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center;
