--- a/src/app/components/legal-notice/legal-notice.scss
+++ b/src/app/components/legal-notice/legal-notice.scss
@@ -15,7 +15,7 @@
     width: 300px;
     height: 330px;
     display: block;
-    background-image: url("/assets/img/BG-shape.png");
+    background-image: url("../../../../public/assets/img/BG-shape.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
