--- a/src/app/components/menu-bar/menu-bar.scss
+++ b/src/app/components/menu-bar/menu-bar.scss
@@ -48,7 +48,7 @@
           transform: translate(-50%, -50%);
           width: 200px;
           height: 60px;
-          background-image: url('/assets/img/Ellipse-24.png');
+          background-image: url('../../../../public/assets/img/Ellipse-24.png');
           background-size: contain;
           background-repeat: no-repeat;
           background-position: center;
@@ -95,7 +95,7 @@
           transform: translate(-50%, -50%);
           width: 150%;
           height: 150%;
-          background-image: url('/assets/img/Ellipse-24.png');
+          background-image: url('../../../../public/assets/img/Ellipse-24.png');
           background-size: contain;
           background-repeat: no-repeat;
           background-position: center;
