--- a/src/app/components/mobile-menu/mobile-menu.scss
+++ b/src/app/components/mobile-menu/mobile-menu.scss
@@ -40,7 +40,7 @@
           transform: translate(-50%, -50%);
           width: 200%;
           height: 200%;
-          background-image: url('/assets/img/Ellipse-24.png');
+          background-image: url('../../../../public/assets/img/Ellipse-24.png');
           background-size: contain;
           background-repeat: no-repeat;
           background-position: center;
@@ -84,7 +84,7 @@
           transform: translate(-50%, -50%);
           width: 150%;
           height: 150%;
-          background-image: url('/assets/img/Ellipse-24.png');
+          background-image: url('../../../../public/assets/img/Ellipse-24.png');
           background-size: contain;
           background-repeat: no-repeat;
           background-position: center;
